# SEAL

./: .gitignore  CONTRIBUTING.md  README.md  package.json
api/: .gitignore  pyproject.toml
api/seal/: db.sqlite3
api/seal/api/: settings.py  urls.py  views.py
api/seal/backend/: admin.py  models.py  serializers.py  urls.py  views.py
api/seal/backend/migrations/: 0001_initial.py  0002_rename_documnent_document.py
