[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Abdelaziz Elemary <abdelaziz528@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
drf-extra-fields = "^3.4.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
